add remaining components to example app; add docs to README

--- a/package.json
+++ b/package.json
@@ -44,5 +44,7 @@
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "hooks": "^0.3.2"
+  }
 }
