--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,8 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
-    "react-app-polyfill": "^1.0.0"
+    "react-app-polyfill": "^1.0.0",
+    "react-tabs": "^3.1.0"
   },
   "alias": {
     "react": "../node_modules/react",
