--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "react-app-polyfill": "^1.0.0",
-    "react-tabs": "^3.1.0"
+    "react-tabs": "^3.2.2"
   },
   "alias": {
     "react": "../node_modules/react",
@@ -19,7 +19,7 @@
   "devDependencies": {
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.8.4",
-    "parcel": "^1.12.3",
+    "parcel": "^2.0.0-beta.2",
     "typescript": "^3.4.5"
   }
 }
