--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "tsdx build"
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why"
   },
   "peerDependencies": {
-    "esri-loader": "^2.13.0",
+    "esri-loader": ">=2.13.0",
     "react": ">=16"
   },
   "husky": {
@@ -38,20 +44,27 @@
   "name": "esri-loader-hooks",
   "author": "tom@tomwayson.com",
   "module": "dist/esri-loader-hooks.esm.js",
+  "size-limit": [
+    {
+      "path": "dist/esri-loader-hooks.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/esri-loader-hooks.esm.js",
+      "limit": "10 KB"
+    }
+  ],
   "devDependencies": {
-    "@types/jest": "^25.1.3",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "esri-loader": "^2.13.0",
-    "husky": "^4.2.3",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "tsdx": "^0.12.3",
-    "tslib": "^1.11.1",
-    "typescript": "^3.8.3"
-  },
-  "dependencies": {
-    "hooks": "^0.3.2"
+    "@size-limit/preset-small-lib": "^5.0.1",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "esri-loader": "^3.2.0",
+    "husky": "^7.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "size-limit": "^5.0.1",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.3.0",
+    "typescript": "^3.9.10"
   }
 }
